@@ -14,12 +14,13 @@
 use 5.16.0;
 use strict;
 use warnings FATAL => 'all';
-use SBO::Lib qw/ prompt usage_error script_error in show_version %config /;
+use SBO::Lib qw/ prompt usage_error script_error in show_version lint_sbo_home %config /;
 use File::Basename;
 use Getopt::Long qw(:config bundling);
 use File::Path qw(remove_tree);
 
 my $self = basename($0);
+lint_sbo_home();
 
 sub show_usage {
 	print <<"EOF";
