@@ -14,11 +14,12 @@
 use 5.16.0;
 use strict;
 use warnings FATAL => 'all';
-use SBO::Lib qw/ slackbuilds_or_fetch slurp script_error open_read get_build_queue get_installed_packages get_reverse_reqs %config $slackbuilds_txt $repo_path show_version in indent get_from_info uniq /;
+use SBO::Lib qw/ slackbuilds_or_fetch slurp script_error open_read get_build_queue get_installed_packages get_reverse_reqs %config $slackbuilds_txt $repo_path show_version in indent get_from_info uniq lint_sbo_home /;
 use File::Basename;
 use Getopt::Long qw(:config bundling);
 
 my $self = basename($0);
+lint_sbo_home();
 
 sub show_usage {
 	print <<"EOF";
