@@ -14,13 +14,14 @@
 use 5.16.0;
 use strict;
 use warnings FATAL => 'all';
-use SBO::Lib qw/ %config _ERR_OPENFH get_arch get_build_queue get_installed_cpans get_installed_packages get_sbo_location get_sbo_locations in merge_queues open_fh print_failures process_sbos prompt show_version slackbuilds_or_fetch slurp usage_error user_prompt verify_gpg /;
+use SBO::Lib qw/ %config _ERR_OPENFH get_arch get_build_queue get_installed_cpans get_installed_packages get_sbo_location get_sbo_locations in merge_queues open_fh print_failures process_sbos prompt show_version slackbuilds_or_fetch slurp usage_error user_prompt verify_gpg lint_sbo_home /;
 use Getopt::Long qw(:config bundling);
 use File::Basename;
 use File::Copy;
 use JSON::PP;
 
 my $self = basename($0);
+lint_sbo_home();
 
 sub show_usage {
 	print <<"EOF";
